--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
     <span class="page-title-icon bg-gradient-primary text-white mr-2">
       <i class="mdi mdi-home"></i>                 
     </span>
-    Dashboard
+    Dashboard Dioner
   </h3>
   <nav aria-label="breadcrumb">
     <ul class="breadcrumb">
