--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -3,7 +3,7 @@
 @import '../../../styles.scss';
 .sidebar {
   min-height: calc(100vh - #{$navbar-height});
-  background: $sidebar-bg;
+  background: radial-gradient(70% 40% at right 45%, rgb(74, 109, 139),rgb(21,37, 53));
   font-family: $type1-regular;
   padding: 0;
   width: $sidebar-width-lg;
@@ -21,6 +21,22 @@
     &:not(.sub-menu) {
       padding-bottom: 60px;
     }
+  .search-button{
+    border:none;
+    margin: 4px;
+    margin-bottom: 20px;
+  }
+  .search-button input {
+    background:rgb(15, 27, 40);
+    border:none;
+  }
+
+  .title-sidebar{
+    color: white;
+    font-size: 15px;
+    margin-top: 10px;
+    margin-left: 7px;
+  }
 
     .nav-item {
       padding:0 $sidebar-menu-padding-x;
@@ -86,7 +102,7 @@
         }
 
         .menu-title {
-          color: inherit;
+          color: white;
           display: inline-block;
           font-size: $sidebar-menu-font-size;
           line-height: 1;
@@ -110,17 +126,28 @@
       &.active {
         .nav-link {
           .menu-title {
-            color: $sidebar-menu-active-color;
-            font-family: $type1-medium;            
+            color: white;
+            font-family: $type1-medium;
           }
           i {
-            color: theme-color(primary);
+            color: theme-color(white);
           }
         }
       }
 
+      &.active {
+        .nav-item{
+          padding: 0;
+        }
+
+        &.active{
+          background-color: rgb(25, 53, 70);
+        }
+
+      }
+
       &:hover{
-        background: $sidebar-menu-hover-bg;
+        background: #203354
       }
       &.nav-profile {
         .nav-link {
@@ -191,7 +218,7 @@
       .nav-item {
         padding: 0;
         .nav-link {
-          color: $sidebar-submenu-color;
+          color: rgb(90, 87, 87);
           padding: $sidebar-submenu-item-padding;
           position: relative;
           font-size: $sidebar-submenu-font-size;
@@ -214,16 +241,17 @@
             font-size: .75rem;
           }
           &.active {
-            color: $sidebar-menu-active-color;
+            color:rgb(0, 180, 149);
             background: transparent;
           }
           &:hover {
-            color: $sidebar-submenu-hover-color;
+            color:rgb(0, 180, 149);
           }
         }
         &:hover {
           background: transparent;
         }
+
       }
     }
   }
@@ -233,7 +261,7 @@
 // Sidebar icon only layout start
 :host-context(.sidebar-icon-only) {
   @media(min-width: 992px) {
-    .sidebar {
+      .sidebar {
       width: $sidebar-width-icon;
       .nav {
         overflow: visible;
@@ -245,7 +273,7 @@
           .nav-link {
             display: block;
             padding-left: .5rem;
-            padding-right: .5rem;            
+            padding-right: .5rem;
             text-align: center;
             position: static;
             .menu-title,
@@ -280,7 +308,7 @@
               .menu-title {
                 @include display-flex;
                 @include align-items(center);
-                background: $sidebar-menu-hover-bg;
+                background-color: rgb(0, 180, 149);
                 padding: 0.5rem 1.4rem;
                 left: $sidebar-width-icon;
                 position: absolute;
@@ -291,11 +319,12 @@
                 z-index: 1;
                 line-height: 1.8;
                 -webkit-box-shadow: 4px 0px 7px 0px rgba(182, 185, 189, 0.25);
-                        box-shadow: 4px 0px 7px 0px rgba(182, 185, 189, 0.25);              
+                        box-shadow: 4px 0px 7px 0px rgba(182, 185, 189, 0.25);
                 &:after {
                   display: none;
                 }
               }
+
             }
             .collapse,
             .collapsing {
@@ -364,6 +393,9 @@
     &.active {
       right: 0;
     }
+  }
+  .content-wrapper{
+    margin-left: -2605px;
   }
 }
 
