--- a/src/app/componentes/Configuracion/habitacion/habitacion.component.html
+++ b/src/app/componentes/Configuracion/habitacion/habitacion.component.html
@@ -1,37 +1,55 @@
-<div class="row">
-  <div class="col-lg-12 grid-margin stretch-card">
-    <div class="card">
-      <div class="card-body">
-        <h4 class="card-title">HABITACIONES</h4>
-         <div class="table-responsive">
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th>#</th>
-                <th>Habitacion</th>
-                <th>Descripcion</th>
-                <th>Precio</th>
-                <th>Tipo</th>
-                <th>Nivel</th>
-                <th>Estado</th>
-                <th>Acciones</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let item of habitaciones; index as i">
-                <td>{{i}}</td>
-                <td>{{item.numeroHabitacion}}</td>
-                <td>{{item.descripcion}}</td>
-                <td>{{item.precio}}</td>
-                <td>{{item.tipoId}}</td>
-                <td>{{item.nivelId}}</td>
-                <td>{{item.estadoHabitacion}}</td>
-                <td></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="panel panel-default">
+  <div class='panel-body'>
+    <a ng-click="prepareNew()" onclick="showModal('modal-form')"  title="Nueva Orden de Produccion"  class="btn btn-info btn-sm"><i class="mdi mdi-content-save"></i>&nbsp;Nuevo</a>
+
+    <div class="title">Habitaciones</div>
+
+<div class="row table-filters flex">
+<div class="col-sm-5 col-md-4 style-filters">
+  <input type="text" ng-model="model.filters.filtro" placeholder="Buscar" class="form-control" ng-enter="model.filters.pagina=1;list()" />
+</div>
+
+<div class="col-sm-2 col-md-1 style-filters width-auto">
+  <button class="btn btn-info btn-sm" data-loading-text="Please wait..." ng-click="model.filters.pagina=1;list($event)">&nbsp;Buscar</button>
+</div>
+</div>
+
+<table class="table table-bordered table-hover listTable">
+  <thead class="tableCabecera">
+    <tr >
+      <th>Nª</th>
+      <th>Habitacion</th>
+      <th>Descripcion</th>
+      <th>Precio</th>
+      <th>Tipo</th>
+      <th>Nivel</th>
+      <th>Estado</th>
+      <th>Acciones</th>
+    </tr>
+  </thead>
+<tbody>
+  <tr *ngFor="let item of habitaciones; index as i;">
+    <td>{{i}}</td>
+    <td>{{item.numeroHabitacion}}</td>
+    <td>{{item.descripcion}}</td>
+    <td>{{item.precio}}</td>
+    <td>Doble</td>
+    <td>Primer Piso</td>
+    <td>Disponible</td>
+    <td class='centered'>
+      <button class="btn btn-danger btn-xs" ng-click="prepareEdit(item)" data-toggle="modal" data-target="#editModal" title="Editar" >
+        <i class=" mdi mdi-delete-forever"></i>
+      </button>
+      <button class="btn btn-light btn-xs" ng-click="prepareEdit(item)" data-toggle="modal" data-target="#editModal" title="Editar" >
+        <i class="mdi mdi-grease-pencil "></i>
+      </button>
+      <button class="btn btn-light btn-xs" ng-click="prepareEdit(item)" data-toggle="modal" data-target="#editModal" title="Editar" >
+        <i class=" mdi mdi-weather-cloudy"></i>
+      </button>
+    </td>
+  </tr>
+  </tbody>
+</table>
+<div id="paginador_order_production"></div>
+</div>
 </div>
