--- a/src/assets/scss/_misc.scss
+++ b/src/assets/scss/_misc.scss
@@ -46,7 +46,7 @@ body {
 }
 
 .content-wrapper {
-  background: $content-bg;
+  background-color: rgb(255, 255, 255);
   padding: 2.75rem 2.25rem;
   width: 100%;
   @include flex-grow(1);
@@ -104,8 +104,8 @@ code {
   padding: 15px;
   display: flex;
   margin-bottom: 1rem;
-  @include media-breakpoint-down(md) { 
-    padding: 15px 20px; 
+  @include media-breakpoint-down(md) {
+    padding: 15px 20px;
     display: block;
   }
 
@@ -129,7 +129,7 @@ code {
     font-weight: 400;
     vertical-align: middle;
     line-height: 1;
-    @include media-breakpoint-down(md) { 
+    @include media-breakpoint-down(md) {
       margin-bottom: 10px;
     }
   }
